[package]
name = "inclauserator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
serde = { version = "1.0.187", features = ["derive"] }
tokio = { version = "1.32.0", features = ["tracing", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
